--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "^C",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^5.1.0"
+    "inquirer": "^5.1.0",
+    "pg": "^7.8.2",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.43.0"
   },
   "devDependencies": {
     "jasmine": "^3.1.0"
